--- a/session-8/ERPSolution/HRISWebApplication/Site.Master
+++ b/session-8/ERPSolution/HRISWebApplication/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - HRIS Web Application</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">HRIS Dashboard</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
                     <a class="nav-link" href="/Setup/CompanyInformationForm">Company Information Form</a>
                     <a class="nav-link" href="/Setup/DepartmentForm">Department Form</a>
                     <a class="nav-link" href="/Setup/OfficeLocationForm">Office Location Form</a>
@@ -36,14 +35,14 @@
         </div>
     </nav>
 
-    <div class="container body-content">
-        <h1>This is master page</h1>
-
-        <asp:ContentPlaceHolder ID="MainContent" runat="server">
-        </asp:ContentPlaceHolder>
+    <div class="body-content">
+        <main class="min-vh-100">
+            <asp:ContentPlaceHolder ID="MainContent" runat="server">
+            </asp:ContentPlaceHolder>
+        </main>
         <hr />
-        <footer>
-            <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+        <footer class="text-center">
+            <p>&copy; <%: DateTime.Now.Year %> | Asif Rezwan Kabir</p>
         </footer>
 
 
