--- a/session-8/ERPSolution/HRISWebApplication/Site.Master
+++ b/session-8/ERPSolution/HRISWebApplication/Site.Master
@@ -12,9 +12,19 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <%--<webopt:BundleReference runat="server" Path="~/Content/css" />--%>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
+    <style>
+        body{
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
 
 </head>
 <body>
@@ -27,8 +37,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="/Setup/CompanyInformationForm">Company Information Form</a>
-                    <a class="nav-link" href="/Setup/DepartmentForm">Department Form</a>
                     <a class="nav-link" href="/Setup/OfficeLocationForm">Office Location Form</a>
+                    <a class="nav-link" href="/Setup/DepartmentForm">Department Form</a>
                     <a class="nav-link" href="/Setup/SectionForm">Section Form</a>
                 </div>
             </div>
